Fix: Fix a bug that caused the menu to flicker immediately after connecting

--- a/dongguk_film/static/css/output.css
+++ b/dongguk_film/static/css/output.css
@@ -2576,10 +2576,6 @@ select {
     margin-top: 0px;
   }
 
-  .md\:block {
-    display: block;
-  }
-
   .md\:flex {
     display: flex;
   }
